--- a/index.html
+++ b/index.html
@@ -46,9 +46,27 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank" class="footer-fonts">Trizia C.</a> and is
-          <a href="#" target="_blank" class="footer-fonts"> on GitHub</a> and
-          <a href="#" target="_blank" class="footer-fonts">hosted on Netlify</a>
+          <a
+            href="https://www.linkedin.com/in/triziacastillo02710/"
+            target="_blank"
+            class="footer-fonts"
+            >Trizia C.</a
+          >
+          and is
+          <a
+            href="https://github.com/zia-27/Weather-App"
+            target="_blank"
+            class="footer-fonts"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://www.netlify.com/"
+            target="_blank"
+            class="footer-fonts"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
