Changed my GitHub profile link and Netlify link.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>
           This project was coded by
           <a
-            href="https://www.linkedin.com/in/triziacastillo02710/"
+            href="https://github.com/zia-27"
             target="_blank"
             class="footer-fonts"
             >Trizia C.</a
@@ -62,7 +62,7 @@
           >
           and
           <a
-            href="https://www.netlify.com/"
+            href="https://cosmic-daifuku-74537a.netlify.app"
             target="_blank"
             class="footer-fonts"
             >hosted on Netlify</a
